hard-gists/9676416/run.log
=== Docker Run Log for 9676416 ===
Started at: Mi 29. Okt 18:30:25 CET 2025

[2025-10-29 18:30:25] START: Running container for 9676416
[2025-10-29 18:30:26] SUCCESS: Container 24affced6dc666f6b4dcc91067ff5f860530ac879fda94868fbfbfbf20f39053 started for 9676416
=== Container logs for 9676416 ===
  File "/snippet.py", line 103
    print result.log
    ^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 9676416 ===
[2025-10-29 18:30:28] INFO: Container 24affced6dc666f6b4dcc91067ff5f860530ac879fda94868fbfbfbf20f39053 has stopped
